2009-04-30  Jorge Gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: added two links to tlink, and fixed http://
	* for anotherone.

2009-04-17  Esteban Sanchez  <estebans@artica.es>

	* godmode/servers/manage_recontask_form.php: Removed a notice
	when there's no recon server.

	* include/functions_visual_map.php: Removed a warning when
	there's no parent.

2009-04-14  Esteban Sanchez  <estebans@artica.es>

	* index.php: Removed debug traces.

2009-04-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* images/console/icons/dotmin_ok.png,
	  images/console/icons/appliance_ok.png, 
	  images/console/icons/ap_ok.png,
	  images/console/icons/dotmin.png, 
	  images/console/icons/appliance.png,
	  images/console/icons/dotmin_bad.png, 
	  images/console/icons/ap.png,
	  images/console/icons/switch.png,
	  images/console/icons/appliance_bad.png,
	  images/console/icons/ap_bad.png,
	  images/console/icons/switch_bad.png,
	  images/console/icons/switch_ok.png: Added icons for the visual
	  console.

2009-04-08  Esteban Sanchez  <estebans@artica.es>

	* index.php: Updated refresh meta label that was causing some errors
	when the port was not 80.

2009-04-07  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	* include/languages/index.pot: Updated po template.

2009-04-01  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/pt_BR.po, include/languages/pt_BR.mo: Updated
	  Brazilian Portuguese translation

	* include/languages/index.pot: Updated po template.

2009-03-30  Sancho Lerena  <slerena@artica.es>

	* operation/agentes/estado_agente.php: Agent status down is now
	only shown when agent is fully down (no module report into the
	interval time x2 ).


2009-03-26  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: SLA now admits float numerical data.
	
	* godmode/menu.php: Adjusted some ACL controls: Reporting (LW), 
	
	* graph_builder.php: Now only shows agents with access, not all.